--- a/Tar1/index.html
+++ b/Tar1/index.html
@@ -10,11 +10,11 @@
 <!--div id="wrapper" -->
   <!-- Begin Header -->
   <div id="header">
-      <h4><a href="http://localhost:8853/layout89/index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="http://localhost:8853/layout89/index.html">About Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="http://localhost:8853/layout89/index.html">Products</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="http://localhost:8853/layout89/index.html">Services</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="http://localhost:8853/layout89/index.html">Contact Us</a></h4>
+      <h4><a href="#top">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#top">About Us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#top">Products</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#top">Services</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#top">Contact Us</a></h4>
   </div>
   <!-- End Header -->
   <!-- Begin Navigation -->
@@ -28,19 +28,19 @@
        <div id="login">
           <form action="login.php" method ="POST">
           <label for="signin-email" class="placeholder"><h4>Username:</h4></label>
-          <input type="email" id="signin-email" class="text-input email-input" name="Email" title="Email" autocomplete="on" tabindex=1>
+          <input type="email" id="signin-email" class="text-input email-input" name="Email" title="Email" autocomplete="on" tabindex="1"/>
           <table class="flex-table password-signin">
           <tbody>
           <tr>
             <td>
               <label for="signin-password" ><h4>Password:</h4></label>
-                <input type="password" id="signin-password" class="text-input flex-table-input" name="Password" title="Password" tabindex=2>
+                <input type="password" id="signin-password" class="text-input flex-table-input" name="Password" title="Password" tabindex="2"/>
             </td>
           </tr>
          </tbody>
         </table>
-       <button type="submit" class="submit btn primary-btn flex-table-btn js-submit" tabindex=4>Login</button>
-              <a href="http://localhost:8853/layout89/index.html">Register Account</a>
+       <button type="submit" class="submit btn primary-btn flex-table-btn js-submit" tabindex="4">Login</button>
+              <a href="#top">Register Account</a>
           </form>
        </div>
        <div id="search">
@@ -49,20 +49,20 @@
           <table class="flex-table password-signin">
          
         </table>
-       <button type="submit" class="submit btn primary-btn flex-table-btn js-submit" tabindex=4>Search</button>
-              <a href="http://localhost:8853/layout89/index.html">Advanced Search</a>
+       <button type="submit" class="submit btn primary-btn flex-table-btn js-submit" tabindex="4">Search</button>
+              <a href="#top">Advanced Search</a>
           </form>
        </div> 
       <h3>Our Clients:</h3>
        <div id="OurContacts">
-            <li><a href="http://localhost:8853/layout89/index.html">JCE</a></li>
-            <li><a href="http://localhost:8853/layout89/index.html">Kalifa Shoes</a></li>
-            <li><a href="http://localhost:8853/layout89/index.html">Kravitz</a></li>
-            <li><a href="http://localhost:8853/layout89/index.html">More Clients..</a></li>
+            <li><a href="#top">JCE</a></li>
+            <li><a href="#top">Kalifa Shoes</a></li>
+            <li><a href="#top">Kravitz</a></li>
+            <li><a href="#top">More Clients..</a></li>
        </div>
       <h3>From The Press:</h3>
        <div id="FromThePress">
-           <h4>"Office All" is a great store, rational price an quick delivery. KEDAY! (G.Yafit)<a href="http://localhost:8853/layout89/index.html">More..</a></h4>
+           <h4>"Office All" is a great store, rational price an quick delivery. KEDAY! (G.Yafit)<a href="#top">More..</a></h4>
        </div>
   </div>
   <!-- End Left Column -->
@@ -82,11 +82,11 @@
        </div>
       <h3>Some Of Our Suppliers:</h3>
        <div id="Some">
-           <li><a href="http://localhost:8853/layout89/index.html">David</a></li>
-           <li><a href="http://localhost:8853/layout89/index.html">Moshe Cohen</a></li>
-           <li><a href="http://localhost:8853/layout89/index.html">Shimon Levy</a></li>
-           <li><a href="http://localhost:8853/layout89/index.html">Dafna</a></li>
-           <li><a href="http://localhost:8853/layout89/index.html">Vew all suppliers' list</a></li>
+           <li><a href="#top">David</a></li>
+           <li><a href="#top">Moshe Cohen</a></li>
+           <li><a href="#top">Shimon Levy</a></li>
+           <li><a href="#top">Dafna</a></li>
+           <li><a href="#top">Vew all suppliers' list</a></li>
        </div> 
       <h3>Products of the day:</h3>
        <div id="Products">
